# Terminator

./: .gitignore  CONTRIBUTING.md  README.md  meson.build  org.ramez.terminator.json
data/: meson.build  org.ramez.terminator.data.gresource.xml  org.ramez.terminator.desktop.in  org.ramez.terminator.gschema.xml  org.ramez.terminator.metainfo.xml.in  org.ramez.terminator.service.in  org.ramez.terminator.src.gresource.xml  style.css
data/icons/: meson.build
data/ui/: window.ui
debian/: changelog  control  copyright
packaging/aur/: .SRCINFO  PKGBUILD
packaging/obs/: _service
packaging/rpm/: app-terminator.spec  terminator.spec
po/: POTFILES.in  meson.build
src/: appsList.js  main.js  meson.build  org.ramez.terminator.data.gresource.xml  org.ramez.terminator.in  org.ramez.terminator.src.gresource.xml  packageKit.js  snap.js  window.js  window.ui
src/managers/: appImage.js  flatpak.js  index.js  snap.js  systemPackage.js  userLocal.js
src/ui/: appsList.js  scroll.js  window.js
